--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "node-cli"
-version = "2.0.0-alpha.5"
+version = "2.0.0-dev"
 authors = ["Parity Technologies <admin@parity.io>"]
 description = "Generic Substrate node implementation in Rust."
 build = "build.rs"
@@ -14,6 +14,9 @@ repository = "https://github.com/paritytech/substrate/"
 # `wasm-opt` has some problems on linux, see
 # https://github.com/rustwasm/wasm-pack/issues/781 etc.
 wasm-opt = false
+
+[package.metadata.docs.rs]
+targets = ["x86_64-unknown-linux-gnu"]
 
 [badges]
 travis-ci = { repository = "paritytech/substrate" }
@@ -45,74 +48,75 @@ tracing = "0.1.10"
 hex = "0.4.0"
 
 # primitives
-sp-authority-discovery = { version = "2.0.0-alpha.5",  git = "https://github.com/ProChain/substrate.git" }
-sp-consensus-babe = { version = "0.8.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-grandpa-primitives = { version = "2.0.0-alpha.5", package = "sp-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-sp-core = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sp-timestamp = { version = "2.0.0-alpha.5", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-finality-tracker = { version = "2.0.0-alpha.5", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-inherents = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sp-keyring = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sp-io = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sp-consensus = { version = "0.8.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sp-transaction-pool = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
+sp-authority-discovery = { version = "2.0.0-dev",  git = "https://github.com/ProChain/substrate.git" }
+sp-consensus-babe = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
+grandpa-primitives = { version = "2.0.0-dev", package = "sp-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sp-timestamp = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-finality-tracker = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-inherents = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sp-keyring = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sp-consensus = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sp-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
 
 # client dependencies
-sc-client-api = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-client = { version = "0.8.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-chain-spec = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-transaction-pool = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-network = { version = "0.8.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-consensus-babe = { version = "0.8.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-grandpa = { version = "0.8.0-alpha.5", package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-sc-client-db = { version = "0.8.0-alpha.5", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sc-offchain = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-rpc = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-basic-authorship = { version = "0.8.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-service = { version = "0.8.0-alpha.5", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sc-telemetry = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-tracing = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-authority-discovery = { version = "0.8.0-alpha.5",  git = "https://github.com/ProChain/substrate.git" }
+sc-client-api = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-chain-spec = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-consensus = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-network = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-consensus-babe = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
+grandpa = { version = "0.8.0-dev", package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
+sc-client-db = { version = "0.8.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sc-offchain = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-rpc = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-basic-authorship = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-service = { version = "0.8.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sc-tracing = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-telemetry = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-authority-discovery = { version = "0.8.0-dev",  git = "https://github.com/ProChain/substrate.git" }
 
 # frame dependencies
-pallet-indices = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-pallet-timestamp = { version = "2.0.0-alpha.5", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-frame-system = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-pallet-balances = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-frame-support = { version = "2.0.0-alpha.5", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-im-online = { version = "2.0.0-alpha.5", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-authority-discovery = { version = "2.0.0-alpha.5",  git = "https://github.com/ProChain/substrate.git" }
-pallet-staking = { version = "2.0.0-alpha.5",  git = "https://github.com/ProChain/substrate.git" }
+pallet-indices = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+pallet-timestamp = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+pallet-balances = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+frame-support = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-im-online = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-authority-discovery = { version = "2.0.0-dev",  git = "https://github.com/ProChain/substrate.git" }
+pallet-staking = { version = "2.0.0-dev",  git = "https://github.com/ProChain/substrate.git" }
 
 # node-specific dependencies
-node-runtime = { version = "2.0.0-alpha.5", path = "../runtime" }
-node-rpc = { version = "2.0.0-alpha.5", path = "../rpc" }
-node-primitives = { version = "2.0.0-alpha.5", path = "../primitives" }
-node-executor = { version = "2.0.0-alpha.5", path = "../executor" }
+node-runtime = { version = "2.0.0-dev", path = "../runtime" }
+node-rpc = { version = "2.0.0-dev", path = "../rpc" }
+node-primitives = { version = "2.0.0-dev", path = "../primitives" }
+node-executor = { version = "2.0.0-dev", path = "../executor" }
 
 # CLI-specific dependencies
-sc-cli = { version = "0.8.0-alpha.5", optional = true, git = "https://github.com/ProChain/substrate.git" }
-frame-benchmarking-cli = { version = "2.0.0-alpha.5", optional = true, git = "https://github.com/ProChain/substrate.git" }
-node-transaction-factory = { version = "0.8.0-alpha.5", optional = true, path = "../transaction-factory" }
-node-inspect = { version = "0.8.0-alpha.5", optional = true, path = "../inspect" }
+sc-cli = { version = "0.8.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git" }
+frame-benchmarking-cli = { version = "2.0.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git" }
+node-transaction-factory = { version = "0.8.0-dev", optional = true, path = "../transaction-factory" }
+node-inspect = { version = "0.8.0-dev", optional = true, path = "../inspect" }
 
 # WASM-specific dependencies
 wasm-bindgen = { version = "0.2.57", optional = true }
 wasm-bindgen-futures = { version = "0.4.7", optional = true }
-browser-utils = { package = "substrate-browser-utils", git = "https://github.com/ProChain/substrate.git", optional = true, version = "0.8.0-alpha.5" }
+browser-utils = { package = "substrate-browser-utils", git = "https://github.com/ProChain/substrate.git", optional = true, version = "0.8.0-dev" }
 
 [target.'cfg(target_arch="x86_64")'.dependencies]
-node-executor = { version = "2.0.0-alpha.4", path = "../executor", features = [ "wasmtime" ] }
-sc-cli = { version = "0.8.0-alpha.4", optional = true, git = "https://github.com/ProChain/substrate.git", features = [ "wasmtime" ] }
-sc-service = { version = "0.8.0-alpha.4", default-features = false, git = "https://github.com/ProChain/substrate.git", features = [ "wasmtime" ] }
+node-executor = { version = "2.0.0-dev", path = "../executor", features = [ "wasmtime" ] }
+sc-cli = { version = "0.8.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git", features = [ "wasmtime" ] }
+sc-service = { version = "0.8.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git", features = [ "wasmtime" ] }
 
 [dev-dependencies]
-sc-keystore = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
-sc-consensus-babe = { version = "0.8.0-alpha.5", features = ["test-helpers"], git = "https://github.com/ProChain/substrate.git" }
-sc-consensus-epochs = { version = "0.8.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
+sc-keystore = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-consensus = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-consensus-babe = { version = "0.8.0-dev", features = ["test-helpers"], git = "https://github.com/ProChain/substrate.git" }
+sc-consensus-epochs = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
 sc-service-test = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
 futures = "0.3.4"
 tempfile = "3.1.0"
@@ -123,13 +127,13 @@ platforms = "0.2.1"
 
 [build-dependencies]
 structopt = { version = "0.3.8", optional = true }
-node-transaction-factory = { version = "0.8.0-alpha.5", optional = true, path = "../transaction-factory" }
-node-inspect = { version = "0.8.0-alpha.5", optional = true, path = "../inspect" }
-frame-benchmarking-cli = { version = "2.0.0-alpha.5", optional = true, git = "https://github.com/ProChain/substrate.git" }
-substrate-build-script-utils = { version = "2.0.0-alpha.5", optional = true, git = "https://github.com/ProChain/substrate.git" }
+node-transaction-factory = { version = "0.8.0-dev", optional = true, path = "../transaction-factory" }
+node-inspect = { version = "0.8.0-dev", optional = true, path = "../inspect" }
+frame-benchmarking-cli = { version = "2.0.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git" }
+substrate-build-script-utils = { version = "2.0.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git" }
 
 [build-dependencies.sc-cli]
-version = "0.8.0-alpha.5"
+version = "0.8.0-dev"
 package = "sc-cli"
 git = "https://github.com/ProChain/substrate.git"
 optional = true
@@ -147,7 +151,7 @@ cli = [
 	"node-transaction-factory",
 	"sc-cli",
 	"frame-benchmarking-cli",
-	"sc-service/rocksdb",
+	"sc-service/db",
 	"structopt",
 	"substrate-build-script-utils",
 ]
@@ -155,6 +159,3 @@ runtime-benchmarks = [
 	"node-runtime/runtime-benchmarks",
 	"frame-benchmarking-cli",
 ]
-
-[package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
