--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -1,18 +1,21 @@
 [package]
 name = "node-primitives"
-version = "2.0.0-alpha.5"
+version = "2.0.0-dev"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 license = "GPL-3.0"
 homepage = "https://substrate.dev"
 repository = "https://github.com/paritytech/substrate/"
 
+[package.metadata.docs.rs]
+targets = ["x86_64-unknown-linux-gnu"]
+
 [dependencies]
-sp-core = { version = "2.0.0-alpha.5", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { version = "2.0.0-alpha.5", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 
 [dev-dependencies]
-sp-serializer = { version = "2.0.0-alpha.5", git = "https://github.com/ProChain/substrate.git" }
+sp-serializer = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
 pretty_assertions = "0.6.1"
 
 [features]
@@ -21,6 +24,3 @@ std = [
 	"sp-core/std",
 	"sp-runtime/std",
 ]
-
-[package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
