--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "node-cli"
-version = "2.0.0-dev"
+version = "2.0.0-rc3"
 authors = ["Parity Technologies <admin@parity.io>"]
 description = "Generic Substrate node implementation in Rust."
 build = "build.rs"
 edition = "2018"
-license = "GPL-3.0"
+license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
 default-run = "prochain"
 homepage = "https://substrate.dev"
 repository = "https://github.com/paritytech/substrate/"
@@ -40,84 +40,86 @@ serde_json = "1.0"
 futures01 = { package = "futures", version = "0.1.29" }
 futures = { version = "0.3.1", features = ["compat"] }
 hex-literal = "0.2.1"
-jsonrpc-core = "14.0.3"
+jsonrpc-core = "14.2.0"
 log = "0.4.8"
 rand = "0.7.2"
 structopt = { version = "0.3.8", optional = true }
 tracing = "0.1.10"
 hex = "0.4.0"
+parking_lot = "0.10.0"
 
 # primitives
-sp-authority-discovery = { version = "2.0.0-dev",  git = "https://github.com/ProChain/substrate.git" }
-sp-consensus-babe = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-grandpa-primitives = { version = "2.0.0-dev", package = "sp-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-sp-core = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-timestamp = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-finality-tracker = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-inherents = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-keyring = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-io = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-consensus = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sp-authority-discovery = { version = "2.0.0-rc3",  git = "https://github.com/ProChain/substrate.git" }
+sp-consensus-babe = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+grandpa-primitives = { version = "2.0.0-rc3", package = "sp-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-timestamp = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-finality-tracker = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-inherents = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-keyring = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-consensus = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-transaction-pool = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
 
 # client dependencies
-sc-client-api = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-chain-spec = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-consensus = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-network = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-consensus-babe = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-grandpa = { version = "0.8.0-dev", package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
-sc-client-db = { version = "0.8.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sc-offchain = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-rpc = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-basic-authorship = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-service = { version = "0.8.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sc-tracing = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-telemetry = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-authority-discovery = { version = "0.8.0-dev",  git = "https://github.com/ProChain/substrate.git" }
+sc-client-api = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-chain-spec = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-consensus = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-transaction-pool = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-network = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-consensus-babe = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+grandpa = { version = "0.8.0-rc3", package = "sc-finality-grandpa", git = "https://github.com/ProChain/substrate.git" }
+sc-client-db = { version = "0.8.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sc-offchain = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-rpc = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-basic-authorship = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-service = { version = "0.8.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sc-tracing = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-telemetry = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-authority-discovery = { version = "0.8.0-rc3",  git = "https://github.com/ProChain/substrate.git" }
 
 # frame dependencies
-pallet-indices = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-timestamp = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-frame-system = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-balances = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-frame-support = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-im-online = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-authority-discovery = { version = "2.0.0-dev",  git = "https://github.com/ProChain/substrate.git" }
-pallet-staking = { version = "2.0.0-dev",  git = "https://github.com/ProChain/substrate.git" }
+pallet-indices = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-timestamp = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-balances = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+frame-support = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-im-online = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-authority-discovery = { version = "2.0.0-rc3",  git = "https://github.com/ProChain/substrate.git" }
+pallet-staking = { version = "2.0.0-rc3",  git = "https://github.com/ProChain/substrate.git" }
 
-# node-specific dependencies
-node-runtime = { version = "2.0.0-dev", path = "../runtime" }
-node-rpc = { version = "2.0.0-dev", path = "../rpc" }
-node-primitives = { version = "2.0.0-dev", path = "../primitives" }
-node-executor = { version = "2.0.0-dev", path = "../executor" }
+# local node-specific dependencies
+node-runtime = { version = "2.0.0-rc3", path = "../runtime" }
+node-rpc = { version = "2.0.0-rc3", path = "../rpc" }
+node-primitives = { version = "2.0.0-rc3", path = "../primitives" }
+node-executor = { version = "2.0.0-rc3", path = "../executor" }
 
 # CLI-specific dependencies
-sc-cli = { version = "0.8.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git" }
-frame-benchmarking-cli = { version = "2.0.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git" }
-node-transaction-factory = { version = "0.8.0-dev", optional = true, path = "../transaction-factory" }
-node-inspect = { version = "0.8.0-dev", optional = true, path = "../inspect" }
+sc-cli = { version = "0.8.0-rc3", optional = true, git = "https://github.com/ProChain/substrate.git" }
+frame-benchmarking-cli = { version = "2.0.0-rc3", optional = true, git = "https://github.com/ProChain/substrate.git" }
+# local dep
+node-inspect = { version = "0.8.0-rc3", optional = true, path = "../inspect" }
 
 # WASM-specific dependencies
 wasm-bindgen = { version = "0.2.57", optional = true }
 wasm-bindgen-futures = { version = "0.4.7", optional = true }
-browser-utils = { package = "substrate-browser-utils", git = "https://github.com/ProChain/substrate.git", optional = true, version = "0.8.0-dev" }
+browser-utils = { package = "substrate-browser-utils", git = "https://github.com/ProChain/substrate.git", optional = true, version = "0.8.0-rc3" }
 
 [target.'cfg(target_arch="x86_64")'.dependencies]
-node-executor = { version = "2.0.0-dev", path = "../executor", features = [ "wasmtime" ] }
-sc-cli = { version = "0.8.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git", features = [ "wasmtime" ] }
-sc-service = { version = "0.8.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git", features = [ "wasmtime" ] }
+#local dep
+node-executor = { version = "2.0.0-rc3", path = "../executor", features = [ "wasmtime" ] }
+sc-cli = { version = "0.8.0-rc3", optional = true, git = "https://github.com/ProChain/substrate.git", features = [ "wasmtime" ] }
+sc-service = { version = "0.8.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git", features = [ "wasmtime" ] }
 
 [dev-dependencies]
-sc-keystore = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-consensus = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-consensus-babe = { version = "0.8.0-dev", features = ["test-helpers"], git = "https://github.com/ProChain/substrate.git" }
-sc-consensus-epochs = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-service-test = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-keystore = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-consensus = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-consensus-babe = { version = "0.8.0-rc3", features = ["test-helpers"], git = "https://github.com/ProChain/substrate.git" }
+sc-consensus-epochs = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-service-test = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
 futures = "0.3.4"
 tempfile = "3.1.0"
 assert_cmd = "1.0"
@@ -126,14 +128,14 @@ regex = "1"
 platforms = "0.2.1"
 
 [build-dependencies]
+#local dep
+node-inspect = { version = "0.8.0-rc3", optional = true, path = "../inspect" }
 structopt = { version = "0.3.8", optional = true }
-node-transaction-factory = { version = "0.8.0-dev", optional = true, path = "../transaction-factory" }
-node-inspect = { version = "0.8.0-dev", optional = true, path = "../inspect" }
-frame-benchmarking-cli = { version = "2.0.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git" }
-substrate-build-script-utils = { version = "2.0.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git" }
+frame-benchmarking-cli = { version = "2.0.0-rc3", optional = true, git = "https://github.com/ProChain/substrate.git" }
+substrate-build-script-utils = { version = "2.0.0-rc3", optional = true, git = "https://github.com/ProChain/substrate.git" }
 
 [build-dependencies.sc-cli]
-version = "0.8.0-dev"
+version = "0.8.0-rc3"
 package = "sc-cli"
 git = "https://github.com/ProChain/substrate.git"
 optional = true
@@ -148,7 +150,6 @@ browser = [
 cli = [
 	"node-executor/wasmi-errno",
 	"node-inspect",
-	"node-transaction-factory",
 	"sc-cli",
 	"frame-benchmarking-cli",
 	"sc-service/db",
