--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "node-executor"
-version = "2.0.0-dev"
+version = "2.0.0-rc3"
 authors = ["Parity Technologies <admin@parity.io>"]
 description = "Substrate node implementation in Rust."
 edition = "2018"
-license = "GPL-3.0"
+license = "Apache-2.0"
 homepage = "https://substrate.dev"
 repository = "https://github.com/paritytech/substrate/"
 
@@ -13,34 +13,34 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.0" }
-node-primitives = { version = "2.0.0-dev", path = "../primitives" }
-node-runtime = { version = "2.0.0-dev", path = "../runtime" }
-sc-executor = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-core = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-io = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-state-machine = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-trie = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+node-primitives = { version = "2.0.0-rc3", path = "../primitives" }
+node-runtime = { version = "2.0.0-rc3", path = "../runtime" }
+sc-executor = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-state-machine = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-trie = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
 trie-root = "0.16.0"
-frame-benchmarking = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+frame-benchmarking = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
 
 [dev-dependencies]
 criterion = "0.3.0"
-frame-support = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-frame-system = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-node-testing = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-balances = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-grandpa = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-im-online = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-indices = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-session = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-timestamp = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-pallet-treasury = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-application-crypto = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-externalities = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-substrate-test-client = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+frame-support = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+node-testing = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-balances = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-grandpa = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-im-online = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-indices = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-session = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-timestamp = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+pallet-treasury = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-application-crypto = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-externalities = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+substrate-test-client = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
 wabt = "0.9.2"
 
 [features]
