--- a/inspect/Cargo.toml
+++ b/inspect/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "node-inspect"
-version = "0.8.0-dev"
+version = "0.8.0-rc3"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
-license = "GPL-3.0"
+license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
 homepage = "https://substrate.dev"
 repository = "https://github.com/paritytech/substrate/"
 
@@ -14,10 +14,10 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "1.3.0" }
 derive_more = "0.99"
 log = "0.4.8"
-sc-cli = { version = "0.8.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-client-api = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sc-service = { version = "0.8.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-blockchain = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-core = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sc-cli = { version = "0.8.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-client-api = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sc-service = { version = "0.8.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-blockchain = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
 structopt = "0.3.8"
