--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "node-primitives"
-version = "2.0.0-dev"
+version = "2.0.0-rc3"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
-license = "GPL-3.0"
+license = "Apache-2.0"
 homepage = "https://substrate.dev"
 repository = "https://github.com/paritytech/substrate/"
 
@@ -11,16 +11,22 @@ repository = "https://github.com/paritytech/substrate/"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-sp-core = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
+frame-system = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-application-crypto = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 
 [dev-dependencies]
-sp-serializer = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+sp-serializer = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
 pretty_assertions = "0.6.1"
 
 [features]
 default = ["std"]
 std = [
+    "codec/std",
+	"frame-system/std",
+	"sp-application-crypto/std",
 	"sp-core/std",
 	"sp-runtime/std",
 ]
