--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "node-runtime"
-version = "2.0.0-dev"
+version = "2.0.0-rc3"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 build = "build.rs"
-license = "GPL-3.0"
+license = "Apache-2.0"
 homepage = "https://substrate.dev"
 repository = "https://github.com/paritytech/substrate/"
 
@@ -20,63 +20,65 @@ simple-json = { version = '0.1.3', git = "https://github.com/jingleizhang/simple
 hex = { version = "0.4.0", default-features = false }
 num-bigint-dig = { version = "0.6.0", default-features = false}
 num-traits = { version = "0.2.4", default-features = false}
+static_assertions = "1.1.0"
 
 # primitives
-sp-authority-discovery = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-consensus-babe = { version = "0.8.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-block-builder = { git = "https://github.com/ProChain/substrate.git", default-features = false, version = "2.0.0-dev"}
-sp-inherents = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-node-primitives = { version = "2.0.0-dev", default-features = false, path = "../primitives" }
-sp-offchain = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-core = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-std = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-api = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-runtime = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-staking = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-keyring = { version = "2.0.0-dev", optional = true, git = "https://github.com/ProChain/substrate.git" }
-sp-session = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-transaction-pool = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-version = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-sp-io = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git", default-features = false }
+sp-authority-discovery = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-consensus-babe = { version = "0.8.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-block-builder = { git = "https://github.com/ProChain/substrate.git", default-features = false, version = "2.0.0-rc3"}
+sp-inherents = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+node-primitives = { version = "2.0.0-rc3", default-features = false, path = "../primitives" }
+sp-offchain = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-core = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-std = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-api = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-runtime = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-staking = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-keyring = { version = "2.0.0-rc3", optional = true, git = "https://github.com/ProChain/substrate.git" }
+sp-session = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-transaction-pool = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-version = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+sp-io = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git", default-features = false }
 
 # frame dependencies
-frame-executive = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-frame-benchmarking = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git", optional = true }
-frame-support = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-frame-system = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-frame-system-rpc-runtime-api = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-authority-discovery = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-authorship = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-babe = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-balances = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-collective = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts-primitives = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-contracts-rpc-runtime-api = { version = "0.8.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-democracy = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-elections-phragmen = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-finality-tracker = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-grandpa = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-im-online = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-indices = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-identity = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-membership = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-offences = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-offences-benchmarking = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git", default-features = false, optional = true }
-pallet-randomness-collective-flip = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-recovery = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-session = { version = "2.0.0-dev", features = ["historical"], git = "https://github.com/ProChain/substrate.git", default-features = false }
-pallet-session-benchmarking = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git", default-features = false, optional = true }
-pallet-staking = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-staking-reward-curve = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-scheduler = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-society = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-sudo = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-timestamp = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-treasury = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-utility = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
-pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-dev", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-executive = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-benchmarking = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git", optional = true }
+frame-support = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-system = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+frame-system-benchmarking = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git", optional = true }
+frame-system-rpc-runtime-api = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-authority-discovery = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-authorship = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-babe = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-balances = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-collective = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts-primitives = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-contracts-rpc-runtime-api = { version = "0.8.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-democracy = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-elections-phragmen = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-finality-tracker = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-grandpa = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-im-online = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-indices = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-identity = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-membership = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-offences = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-offences-benchmarking = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git", default-features = false, optional = true }
+pallet-randomness-collective-flip = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-recovery = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-session = { version = "2.0.0-rc3", features = ["historical"], git = "https://github.com/ProChain/substrate.git", default-features = false }
+pallet-session-benchmarking = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git", default-features = false, optional = true }
+pallet-staking = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-staking-reward-curve = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-scheduler = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-society = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-sudo = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-timestamp = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-treasury = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-utility = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
+pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-rc3", default-features = false, git = "https://github.com/ProChain/substrate.git" }
 
 # inner dependencies
 did = { path = "../modules/did", default-features = false }
@@ -88,7 +90,7 @@ ads = { path = "../modules/ads", default-features = false }
 wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git" }
 
 [dev-dependencies]
-#sp-io = { version = "2.0.0-dev", git = "https://github.com/ProChain/substrate.git" }
+#sp-io = { version = "2.0.0-rc3", git = "https://github.com/ProChain/substrate.git" }
 
 [features]
 default = ["std"]
@@ -154,10 +156,12 @@ runtime-benchmarks = [
 	"pallet-democracy/runtime-benchmarks",
 	"pallet-elections-phragmen/runtime-benchmarks",
 	"pallet-identity/runtime-benchmarks",
+	"pallet-indices/runtime-benchmarks",
 	"pallet-im-online/runtime-benchmarks",
 	"pallet-staking/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
 	"pallet-treasury/runtime-benchmarks",
 	"pallet-utility/runtime-benchmarks",
 	"pallet-collective/runtime-benchmarks",
+	"frame-system-benchmarking",
 ]
